# services

./: .env  .gitignore  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docker-image.yml  main.yml
backend/: dockerfile  pyproject.toml
backend/src/backend/: __main__.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/backend/app/: dependencies.py  main.py
backend/src/backend/app/apikey/: model.py  router.py  schema.py  service.py
backend/src/backend/app/core/: auth.py  config.py  imagestore.py  security.py
backend/src/backend/app/db/: database.py
backend/src/backend/app/health/: router.py  schemas.py  service.py
backend/src/backend/app/imagestore/: model.py  router.py  service.py
backend/src/backend/app/user/: model.py  router.py  schemas.py  service.py
database_init/: init-logto.sh
frontend/: docker-entrypoint.sh  dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
garage/: garage.toml
logto/: start.sh
logto/init-logto/: dockerfile  init_backend_in_logto.sh
