[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "noe.marx", email = "noejadenmarx@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "postgres",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
