[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "noe.marx", email = "noejadenmarx@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cryptography>=48.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "passlib>=1.7.4",
    "postgres",
    "pyjwt>=2.12.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
